# spotify-api

./: .gitignore  Pipfile  README.md  pyproject.toml
src/: auth.py  classes.py  daily.py  globals.py  make_podcast_releases.py  merge_track_sources.py  utils.py
